--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,10 @@ body{
 /*---------------------------------------------
                     NAVBAR
 ----------------------------------------------*/
+.show{
+    display: flex !important;
+}
+
 /*Estilo de escritorio*/
 nav{
     display: flex;
@@ -69,6 +73,7 @@ nav .menu{
     display: none;
     flex-direction: column;
     min-width: 200px;
+    margin-top: 48px;
 
     background-color: white;
 }
@@ -113,7 +118,7 @@ nav .mobile .header #bmenu{
 }
 
 nav .mobile .links{
-    display: flex;
+    display: none;
     flex-direction: column;
     position: relative;
     z-index: 200;
