--- a/src/css/main.css
+++ b/src/css/main.css
@@ -164,6 +164,28 @@ header{
                     BANNER
 ----------------------------------------------*/
 
+h2{
+    font-size: 1.8em;
+    position: relative;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+h2::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    bottom: -30px;
+    left: 0;
+    transform: scale(0.4) skewY(-20deg) rotate(20deg);
+
+    background-color: greenyellow;
+
+}
+
 #banner{
     font-size: 1.4em;
     text-align: center;
@@ -179,6 +201,7 @@ header{
 }
 
 .green-button{
+    text-transform: uppercase;
     border: 0;
     display: inline-flex;
     align-items: center;
@@ -195,6 +218,7 @@ header{
 }
 
 .green-link{
+    text-transform: uppercase;
     border: 0;
     display: inline-flex;
     position: relative;
@@ -224,7 +248,7 @@ header{
     transform: scaleX(0.9);
 }
 
-@media screen and (max-width: 1137px) {
+@media screen and (max-width: 1198px) {
     nav .link-hide{
         display: none;
     }
@@ -236,9 +260,15 @@ header{
     header{        
         height: 70vh;
     }
+
+    #banner{
+        position: initial !important;
+        z-index: 100;
+        width: 100%;
+    }
 }
 
-@media screen and (max-width: 640px){
+@media screen and (max-width: 719px){
     nav{
         width: 100%;
         padding: 0;
@@ -255,5 +285,11 @@ header{
     header{        
         background-position: center 40px;
         height: 30vh;
+    }
+
+    #banner{
+        position: initial !important;
+        z-index: 100;
+        width: 100%;
     }
 }
