--- a/src/css/main.css
+++ b/src/css/main.css
@@ -165,12 +165,12 @@ header{
 ----------------------------------------------*/
 
 h2{
-    font-size: 1.8em;
+    font-size: 2.8rem;
     position: relative;
     display: inline-block;
     padding: 0;
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
 }
 
 h2::before{
@@ -246,6 +246,69 @@ h2::before{
 
 .green-link:hover::before{
     transform: scaleX(0.9);
+}
+
+
+/*---------------------------------------------
+                    VIDEOS
+----------------------------------------------*/
+
+.w-75 {
+    width: 75%;
+    margin: 0 auto;
+}
+
+h3{
+    font-size: 1.6em;
+    padding-top: 50px;
+
+    color: white;
+}
+
+p{
+    margin: 10px p;
+}
+
+#videos{
+    text-align: center;
+    padding: 50px 0;
+
+    background-image: url(../img/bg-videos.png);
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    color: white;
+}
+
+#videos #slider #controls{
+    display: flex;
+    justify-content: center;
+}
+
+#videos #slider #controls .prev,
+#videos #slider #controls .next{
+    border: none;
+    height: 50px;
+    width: 80px;
+    background-color: rgb(58, 58, 58);
+    color: white;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+#videos #slider #controls .prev:hover,
+#videos #slider #controls .next:hover{
+    background-color: rgb(37, 37, 37);
+}
+
+#videos #slider #current{
+    width: 1280px;
+    margin: 50px auto;
+    border: solid 1px #00c3ff;
 }
 
 @media screen and (max-width: 1198px) {
