--- a/src/css/main.css
+++ b/src/css/main.css
@@ -382,6 +382,14 @@ p{
         z-index: 100;
         width: 100%;
     }
+
+    #slider #current {
+        width: 80% !important;
+    }
+
+    #slider #current iframe {
+        height: 500px;
+    }
 }
 
 @media screen and (max-width: 719px){
@@ -403,9 +411,15 @@ p{
         height: 30vh;
     }
 
-    #banner{
-        position: initial !important;
-        z-index: 100;
-        width: 100%;
+    #slider #current {
+        width: 90%;
+    }
+
+    #slider #current iframe {
+        height: 300px;
+    }
+
+    #slider #videos-container {
+        display: none !important;
     }
 }
