--- a/src/css/main.css
+++ b/src/css/main.css
@@ -364,6 +364,31 @@ p{
     z-index: 100;
 }
 
+
+/*---------------------------------------------
+                    MULTIPLAYER
+----------------------------------------------*/
+
+#multi-player{
+    height: 100vh;
+    background-image: url(../img/bg-multiplayer.jpeg);
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+.info{
+    line-height: 1.2;
+    padding: 40px;
+    width: 600px;
+    margin-right: 50px;
+
+}
+
+.info p{
+    font-size: 20px;
+}
+
 @media screen and (max-width: 1198px) {
     nav .link-hide{
         display: none;
