--- a/src/css/main.css
+++ b/src/css/main.css
@@ -432,6 +432,13 @@ p{
     width: 80%;
 }
 
+footer{
+    height: 800px;
+
+    background-image: url(../img/master-chief-darkmode.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 @media screen and (max-width: 1519px){
     .info{
@@ -487,6 +494,10 @@ p{
 
     #get-the-game .item-store .right{    
         width: 100%;
+    }
+
+    footer {
+        background-position: center;
     }
 }
 
@@ -544,5 +555,10 @@ p{
     #get-the-game .item-store .right{
         text-align: center;
         width: 100%;
+    }
+
+    footer {
+        height: 400px;
+        background-position: center;
     }
 }
